samples/_failures_safe/1761160104_18ea70_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_96f5f0ba.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_96f5f0ba.c:143:9: error: expected declaration or statement at end of input
  143 |         }
      |         ^
./samples/SAFE/__tmp_96f5f0ba.c:143:9: error: expected declaration or statement at end of input
